fix mob menu height overflow

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -63,13 +63,6 @@
 		transition: height 0.4s ease, transform 0.4s ease;
 	}
 
-	// &.idea-icon {
-	// 	&:after {
-	// 		height: 6px;
-	// 		animation: snake 0.2s linear alternate infinite;
-	// 	}
-	// }
-
 	&.active,
 	&:hover {
 		&:after {
@@ -77,16 +70,6 @@
 		}
 	}
 }
-
-// @keyframes snake {
-// 	0% {
-// 		height: 6px;
-// 	}
-
-// 	100% {
-// 		height: 2px;
-// 	}
-// }
 
 @include tablet {
 	.header {
@@ -172,12 +155,14 @@
 				bottom: 3px;
 			}
 		}
+
 		.mobile-menu {
 			height: 0;
 			opacity: 0;
 			visibility: hidden;
 			overflow: hidden;
 			z-index: 99;
+
 			> div {
 				width: 100%;
 				height: 100%;
@@ -185,8 +170,15 @@
 				overflow-y: auto;
 				scrollbar-width: thin;
 				scrollbar-color: $blue-main $darkest;
-				padding-bottom: 40px;
+				padding: 80px 0 120px;
 			}
+
+			&__content {
+				&--overflow {
+					height: 100%;
+				}
+			}
+
 			.nav-item,
 			.contact-menu {
 				transform: scale(0);
@@ -223,6 +215,7 @@
 				.nav-item:last-child {
 					transition-delay: 0.7s;
 				}
+
 				.contact-menu {
 					transition-delay: 0.8s;
 				}
